--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@marvelapp/react-ab-test": "^3.1.0",
     "bootstrap": "5.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-bootstrap": "1.5.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "18.1.0",
     "react-highlight-words": "^0.18.0",
     "react-icons": "4.2.0",
